maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:15: error: type mismatch;
 found   : Unit
 required: Int
    else if( estFaceMur()){droite(); return vir -1}
         ^Escaper:19: error: not enough arguments for method placement: (vir: Int)Int.
Unspecified value parameter vir.
      if(estFaceMur()){placement()}
                                ^